feat: get user segments
