# docs/swagger.yaml
@@ -58,7 +58,12 @@ components:
           items:
             type: string
             example: 'AVITO_VOICE_MESSAGES'
-
+    UserSegment:
+      type: object
+      properties:
+        slug:
+          type: string
+          example: 'AVITO_VOICE_MESSAGES'
 
 
 paths:
@@ -205,7 +210,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Segment'
+                  $ref: '#/components/schemas/UserSegment'
         '400':
           description: Invalid input, object invalid
           content:
